// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With more than one feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                measurement
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                200mm
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                measurement
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                100mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                200mm
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                100mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With a feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                200mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
              >
                200
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when no classifications provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      MC: pdp.noTechSpecMessage
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly with microcopy text when no classifications and microcopy text is provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      No technical specifications found for this product.
    </div>
  </div>
</body>
`;
